--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Configure demo/test subproject
         run: |
           pushd demo
-          # Use lake update to get the right version
           ~/.elan/bin/lake update
+          ~/.elan/bin/lake build :examples
           popd
 
       - name: Run tests
