--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
           curl -sSfL https://github.com/leanprover/elan/releases/download/v3.0.0/elan-x86_64-unknown-linux-gnu.tar.gz | tar xz
           ./elan-init -y --default-toolchain none
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
+
+      - name: Which lake?
+        run: |
+          which lake
+
       - uses: actions/checkout@v3
 
       - name: List all files
@@ -49,7 +54,8 @@ jobs:
       - name: Configure demo/test subproject
         run: |
           pushd demo
-          lake update
+          ~/.elan/bin/lake update
+          ~/.elan/bin/lake build :examples
           popd
 
       - name: Run tests
