--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
           - "leanprover/lean4:4.5.0"
           - "leanprover/lean4:4.6.0"
           - "leanprover/lean4:4.7.0"
+          - "leanprover/lean4:nightly-2024-04-07"
     name: Build and test
     runs-on: ubuntu-latest
     steps:
