--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
           - "4.8.0"
           - "4.9.0"
           - "4.10.0-rc2"
+          - "nightly-2024-07-12"
+          - "nightly-2024-07-17"
+          - "nightly-2024-07-22"
           - "nightly-2024-07-27"
         platform:
           - os: ubuntu-latest
