--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,11 @@ jobs:
           - "4.8.0"
           - "4.9.0"
           - "4.10.0"
-          - "4.11.0-rc3"
+          - "4.11.0"
+          - "4.12.0-rc1"
           - "nightly-2024-08-09"
           - "nightly-2024-08-29"
+          - "nightly-2024-09-03"
         platform:
           - os: ubuntu-latest
             installer: |
