--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 0 * * *'  # Run every day at midnight
 
 jobs:
-  update-toolchain:
+  nightly-test:
     runs-on: ubuntu-latest
 
     steps:
