--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,13 @@ jobs:
           - "4.11.0"
           - "4.12.0"
           - "4.13.0-rc1"
+          - "nightly-2024-08-09"
+          - "nightly-2024-08-29"
           - "nightly-2024-09-03"
           - "nightly-2024-09-17"
           - "nightly-2024-10-10"
+          - "nightly-2024-10-18"
+          - "nightly-2024-10-30"
         platform:
           - os: ubuntu-latest
             installer: |
