chore: compatibility with latest nightly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           - "4.16.0"
           - "4.17.0-rc1"
           - "nightly-2025-02-11"
+          - "nightly-2025-02-13" # after simp_arith deprecation
         platform:
           - os: ubuntu-latest
             installer: |
