--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
           - "4.17.0"
           - "4.18.0-rc1"
           - "nightly-2025-03-06"
+          - "nightly-2025-03-12"
         platform:
           - os: ubuntu-latest
             installer: |
