--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
           - "4.18.0-rc1"
           - "nightly-2025-03-06"
           - "nightly-2025-03-12"
+          - "nightly-2025-03-16"
         platform:
           - os: ubuntu-latest
             installer: |
