chore: bump to 2025-03-30
The changes to precompiled modules in Lean PR #7716 caused this
library to no longer build, but this modification works around the issue.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
           - "nightly-2025-03-16"
           - "nightly-2025-03-21"
           - "nightly-2025-03-29"
+          - "nightly-2025-03-30"
         platform:
           - os: ubuntu-latest
             installer: |
