--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           - "nightly-2025-03-29"
           - "nightly-2025-03-30"
           - "nightly-2025-04-09"
+          - "nightly-2025-04-14"
         platform:
           - os: ubuntu-latest
             installer: |
