--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,9 @@ jobs:
           - "4.17.0"
           - "4.18.0"
           - "4.19.0"
-          - "4.20.0-rc1"
+          - "4.20.0-rc4"
           - "nightly-2025-04-23"
+          - "nightly-2025-05-08"
         platform:
           - os: ubuntu-latest
             installer: |
