--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
           - "4.20.1"
           - "4.21.0-rc3"
           - "nightly-2025-06-04"
+          - "nightly-2025-06-09"
 
         platform:
           - os: ubuntu-latest
