--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,7 @@ jobs:
       run: |
         set -o pipefail
         curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y --default-toolchain none
-        echo "$HOME/.elan/bin" >> $GITHUB_PATH
+        echo "$HOME/.elan/bin" >> "$GITHUB_PATH"
 
     - name: Check out code
       uses: actions/checkout@v4
