--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           - "4.23.0-rc2"
           - "nightly-2025-08-14"
           - "nightly-2025-08-21"
+          - "nightly-2025-09-09"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
