feat: more code representation
This PR adds support for highlighted module names, as well as more
utilities for slicing and dicing highlighted code that were needed in
Verso.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
           - "4.22.0"
           - "4.23.0"
           - "4.24.0-rc1"
+          - "nightly-2025-09-26"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
