--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           - "4.23.0"
           - "4.24.0-rc1"
           - "nightly-2025-09-26"
+          - "nightly-2025-10-05"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
