--- a/demo-toml/lakefile.toml
+++ b/demo-toml/lakefile.toml
@@ -3,7 +3,7 @@ defaultTargets = ["demo", "Demo", "Anchors"]
 
 [[require]]
 name = "subverso"
-git = ".."
+path = "no-mod"
 
 [[lean_lib]]
 name = "Demo"
