--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -16,6 +16,7 @@ jobs:
           - "nightly-2025-10-13"
           - "nightly-2025-10-20"
           - "nightly-2025-10-31"
+          - "nightly-2025-11-12"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
