--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - main
   pull_request:
+  merge_group:
 
 name: CI (with module system)
 
@@ -30,4 +31,9 @@ jobs:
       os: ${{ matrix.platform.os }}
       installer: ${{ matrix.platform.installer }}
       module-system: true
-      
+
+  module-complete:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "All module-system-enabled tests passed"
