chore: bump to nightly-2025-11-14

--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -15,6 +15,7 @@ jobs:
         toolchain:
           - "4.25.0"
           - "nightly-2025-11-12"
+          - "nightly-2025-11-14"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
