--- a/.github/workflows/ci-pre-module.yml
+++ b/.github/workflows/ci-pre-module.yml
@@ -75,5 +75,9 @@ jobs:
   no-module-complete:
     needs: build
     runs-on: ubuntu-latest
+    if: always()
     steps:
+      - name: "Check matrix result"
+        if: needs.build.result != 'success'
+        run: exit 1
       - run: echo "All tests prior to the module system passed"
