chore: bump to nightly-2025-11-25

--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -18,6 +18,7 @@ jobs:
           - "4.26.0-rc1"
           - "nightly-2025-11-18"
           - "nightly-2025-11-19"
+          - "nightly-2025-11-25"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
