chore: add latest nightly to CI

--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -20,6 +20,7 @@ jobs:
           - "nightly-2025-11-19"
           - "nightly-2025-11-25"
           - "nightly-2025-11-30"
+          - "nightly-2025-12-07"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
