chore: bump to 2026-01-19

--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -18,6 +18,7 @@ jobs:
           - "4.26.0"
           - "4.27.0-rc1"
           - "nightly-2026-01-08"
+          - "nightly-2026-01-19"
 
         platform:
           - os: nscloud-ubuntu-22.04-amd64-8x16
